# IR_measure_ros2

./: 10.5.5-metadata.json  README.md  cmd.txt
bags/: IR_004.csv  IR_013.csv  IR_017.csv  IR_018.csv  read_rosbag_only.py  read_withT_merge.py
bags/rosbag2_2024_11_08-23_21_41/: metadata.yaml  rosbag2_2024_11_08-23_21_41_0.db3
bags/rosbag2_2024_11_14-22_39_02/: metadata.yaml  rosbag2_2024_11_14-22_39_02_0.db3
bags/rosbag2_2024_11_26-23_32_16/: metadata.yaml  rosbag2_2024_11_26-23_32_16_0.db3
bags/rosbag2_2024_11_26-23_53_03/: metadata.yaml  rosbag2_2024_11_26-23_53_03_0.db3
src/ir_led_measure/: CMakeLists.txt  calibration.json  package.xml
src/ir_led_measure/launch/: ir_launch.py  rosbag_launch.py
src/ir_led_measure/log/: latest_build
src/ir_led_measure/scripts/: camera_publisher.py  camera_rosbag.py  cv_grab.py  fusion.py  image_listener copy.py  setup.py
src/reflict/: CMakeLists.txt  package.xml
src/reflict/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/reflict/install/reflict/lib/reflict/: reflict_estimator.py  scan_node.py
src/reflict/install/reflict/share/ament_index/resource_index/package_run_dependencies/: reflict
src/reflict/install/reflict/share/reflict/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/reflict/install/reflict/share/reflict/cmake/: reflictConfig.cmake
src/reflict/log/: latest_build
src/reflict/scripts/: reflict_estimator.py  setup.py
