<?xml version="1.0"?>
<package format="3">
  <name>ir_led_measure</name>
  <version>0.0.0</version>
  <description>A package for IR LED measurement</description>
  <maintainer email="1312017475@qq.com">gxh</maintainer>
  <license>Apache 2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <!-- If you are using C++ nodes, include rclcpp -->
  <!-- <exec_depend>rclcpp</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
